# TebaAI

./: .env.example  .gitignore  AGENTS.md  README.md
SrvRestAstroLS_v1/backend/: globalVar.py  ls_iMotorSoft_Srv01.py  pyproject.toml
SrvRestAstroLS_v1/backend/core/: config.py  dependencies.py  lifespan.py
SrvRestAstroLS_v1/backend/eval_reports/: .gitignore
SrvRestAstroLS_v1/backend/routes/: health.py  ready.py
SrvRestAstroLS_v1/backend/scripts/: analyze_breslov_lemma_layer.py  audit_bibliographic_structure.py  audit_page_chunk_mapping.py  chunk_documents.py  compare_chunking_strategies.py  compare_markdown_chunking_strategies.py  create_admin_user.py  diagnose_page_mapping_failures.py  enrich_chunk_page_metadata.py  evaluate_bibliographic_search.py  index_chunks_milvus.py  ingest_document.py  preflight_pdf_books.py  search_library_text.py  search_milvus.py  validate_breslov_test_hybrid_integrity.py
SrvRestAstroLS_v1/backend/tests/: conftest.py  test_apply_markdown_structural_chunks.py  test_auth_password.py  test_auth_service.py  test_auth_tokens.py  test_bibliographic_structure_audit.py  test_breslov_lemma_layer_analysis.py  test_breslov_test_hybrid_integrity.py  test_compare_chunking_strategies.py  test_config.py  test_enrich_chunk_page_metadata.py  test_evaluation.py  test_global_var.py  test_globalvar_embeddings_config.py  test_globalvar_postgres_config.py  test_hybrid_breslov_test_isolation.py  test_index_breslov_test_markdown_chunks_milvus.py  test_infrastructure_postgres.py  test_ingest_test_candidate.py  test_ingest_test_candidate_books.py  (+9 more)
(+100 files in other folders)
