[project]
name = "tebaai-backend"
version = "0.1.0"
description = "TebaAI Litestar backend"
requires-python = ">=3.12"
dependencies = [
  "argon2-cffi>=25.1.0",
  "litellm>=1.89.3",
  "litestar[standard]>=2.0.0",
  "psycopg>=3.3.4",
  "psycopg-binary>=3.3.4",
  "psycopg-pool>=3.3.1",
  "pydantic-settings>=2.14.0",
  "pyjwt>=2.13.0",
  "pymilvus==2.6.15",
  "pymupdf4llm>=0.4.0",
  "uvicorn[standard]>=0.30.0",
]

[dependency-groups]
dev = [
  "pytest>=8.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
